Your commit message

--- a/index.html
+++ b/index.html
@@ -175,5 +175,15 @@
     <footer>
         <p>&copy; 2024 Kalyanraja. All rights reserved.</p>
     </footer>
+    <div id="loading-screen">
+        <div class="loader">
+            <div class="binary">01</div>
+            <div class="binary">10</div>
+            <div class="binary">11</div>
+        </div>
+    </div>
+    <button id="scroll-top" aria-label="Scroll to top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 </body>
 </html> 
