--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <div class="cursor-dot"></div>
-    <div class="cursor-dot-outline"></div>
-    <div id="noise"></div>
 </head>
 <body>
     <div id="root">
@@ -137,5 +134,6 @@
         </main>
     </div>
     <script src="script.js"></script>
+    <script src="effects.js"></script>
 </body>
 </html> 
