--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <div class="cursor-dot"></div>
+    <div class="cursor-dot-outline"></div>
     <div id="root">
         <!-- Side Email -->
         <div class="side-email">
