--- a/index.html
+++ b/index.html
@@ -5,137 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalyan Raja | Software Engineer</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="cursor-dot"></div>
-    <div class="cursor-dot-outline"></div>
-    <div id="root">
-        <!-- Side Email -->
-        <div class="side-email">
-            <a href="mailto:kk23p@fsu.edu">kk23p@fsu.edu</a>
+    <div class="loader">
+        <div class="loader-content">
+            <div class="loader-circle"></div>
+            <div class="loader-text">Loading...</div>
         </div>
-
-        <!-- Side Social -->
-        <div class="side-social">
-            <ul>
-                <li><a href="https://github.com/Kalyanraja" target="_blank"><i class="fab fa-github"></i></a></li>
-                <li><a href="https://linkedin.com/in/kalyan-raja" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="https://twitter.com/kalyanraja" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            </ul>
-        </div>
-
-        <!-- Main Content -->
-        <main id="content">
-            <!-- Hero Section -->
-            <section id="hero" class="section hero">
-                <h1>Hi, my name is</h1>
-                <h2 class="big-heading">Kalyan Raja.</h2>
-                <h3 class="big-heading">I build things for the web.</h3>
-                <p class="hero-text">
-                    I'm a software engineer specializing in building exceptional digital experiences. 
-                    Currently, I'm pursuing my Master's in Computer Science at 
-                    <a href="https://www.fsu.edu/" target="_blank">Florida State University</a>.
-                </p>
-                <div class="button-wrapper">
-                    <a href="#work" class="main-button">Check out my work!</a>
-                </div>
-            </section>
-
-            <!-- About Section -->
-            <section id="about" class="section">
-                <h2 class="numbered-heading">About Me</h2>
-                <div class="inner">
-                    <div class="about-text">
-                        <p>Hello! I'm Kalyan, and I enjoy creating things that live on the internet. My interest in web development started back in 2018 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!</p>
-                        <p>Here are a few technologies I've been working with recently:</p>
-                        <ul class="skills-list">
-                            <li>JavaScript (ES6+)</li>
-                            <li>React</li>
-                            <li>Node.js</li>
-                            <li>Python</li>
-                            <li>Java</li>
-                            <li>MongoDB</li>
-                        </ul>
-                    </div>
-                    <div class="about-pic">
-                        <div class="wrapper">
-                            <img src="./assets/profile-pic.png" alt="Kalyan Raja" />
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Experience Section -->
-            <section id="experience" class="section">
-                <h2 class="numbered-heading">Where I've Worked</h2>
-                <div class="inner">
-                    <div class="tab-list">
-                        <button class="tab-button active">FSU</button>
-                        <button class="tab-button">Company B</button>
-                        <button class="tab-button">Company C</button>
-                    </div>
-                    <div class="tab-panels">
-                        <div class="tab-panel active">
-                            <h3>Graduate Teaching Assistant <span>@ Florida State University</span></h3>
-                            <p class="range">August 2023 - Present</p>
-                            <ul>
-                                <li>Teaching and mentoring 120+ students in Computer Organization course</li>
-                                <li>Conducting lab sessions on Assembly Language Programming</li>
-                                <li>Developing and grading assignments and exams</li>
-                            </ul>
-                        </div>
-                        <!-- Add more job experiences here -->
-                    </div>
-                </div>
-            </section>
-
-            <!-- Featured Projects -->
-            <section id="projects" class="section">
-                <h2 class="numbered-heading">Some Things I've Built</h2>
-                <ul class="projects-grid">
-                    <!-- Project 1 -->
-                    <li class="project">
-                        <div class="project-content">
-                            <div>
-                                <p class="project-overline">Featured Project</p>
-                                <h3 class="project-title">Driver Safety Prediction System</h3>
-                                <div class="project-description">
-                                    <p>Description of your project goes here...</p>
-                                </div>
-                                <ul class="project-tech-list">
-                                    <li>Python</li>
-                                    <li>TensorFlow</li>
-                                    <li>OpenCV</li>
-                                </ul>
-                                <div class="project-links">
-                                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                                    <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="project-image">
-                            <img src="./assets/project-1.jpg" alt="Project 1" />
-                        </div>
-                    </li>
-                    <!-- Add more projects -->
-                </ul>
-            </section>
-
-            <!-- Contact Section -->
-            <section id="contact" class="section">
-                <h2 class="numbered-heading">What's Next?</h2>
-                <h2 class="title">Get In Touch</h2>
-                <p>
-                    I'm currently looking for new opportunities, and my inbox is always open. 
-                    Whether you have a question or just want to say hi, I'll try my best to get back to you!
-                </p>
-                <a href="mailto:kk23p@fsu.edu" class="main-button">Say Hello</a>
-            </section>
-        </main>
     </div>
+
+    <nav class="navbar">
+        <div class="nav-logo">KR</div>
+        <div class="nav-links">
+            <a href="#home" class="nav-item">Home</a>
+            <a href="#about" class="nav-item">About</a>
+            <a href="#projects" class="nav-item">Projects</a>
+            <a href="#contact" class="nav-item">Contact</a>
+        </div>
+        <div class="nav-social">
+            <a href="https://github.com/Kalyanraja" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/kalyan-raja" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
+    </nav>
+
+    <main>
+        <section id="home" class="hero-section">
+            <div class="hero-content">
+                <h1 class="glitch" data-text="Hello, I'm Kalyan Raja">Hello, I'm Kalyan Raja</h1>
+                <p class="hero-subtitle">Software Engineer & Creative Developer</p>
+                <div class="hero-cta">
+                    <a href="#projects" class="btn primary-btn">View My Work</a>
+                    <a href="#contact" class="btn secondary-btn">Get In Touch</a>
+                </div>
+            </div>
+            <div class="hero-background">
+                <div class="particles"></div>
+            </div>
+        </section>
+
+        <!-- Add other sections here -->
+
+        <section id="contact" class="contact-section">
+            <h2 class="section-title">Get In Touch</h2>
+            <div class="contact-content">
+                <div class="contact-text">
+                    <p>I'm currently open to new opportunities and my inbox is always open. 
+                       Whether you have a question or just want to say hi, I'll try my best 
+                       to get back to you!</p>
+                </div>
+                <div class="contact-form">
+                    <form id="contact-form" class="fade-up">
+                        <div class="form-group">
+                            <input type="text" id="name" required>
+                            <label for="name">Name</label>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" id="email" required>
+                            <label for="email">Email</label>
+                        </div>
+                        <div class="form-group">
+                            <textarea id="message" required></textarea>
+                            <label for="message">Message</label>
+                        </div>
+                        <button type="submit" class="submit-btn">Send Message</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <p>© 2024 Kalyan Raja. All rights reserved.</p>
+            <div class="footer-social">
+                <a href="mailto:kk23p@fsu.edu"><i class="fas fa-envelope"></i></a>
+                <a href="https://github.com/Kalyanraja"><i class="fab fa-github"></i></a>
+                <a href="https://linkedin.com/in/kalyan-raja"><i class="fab fa-linkedin"></i></a>
+            </div>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
-    <script src="effects.js"></script>
 </body>
 </html> 
