--- a/index.html
+++ b/index.html
@@ -3,90 +3,200 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalyan Raja | Software Engineer</title>
+    <title>Kalyan Raja | Software Engineer & HPC Specialist</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="mediaqueries.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
 <body>
-    <div class="loader">
-        <div class="loader-content">
-            <div class="loader-circle"></div>
-            <div class="loader-text">Loading...</div>
-        </div>
+    <!-- Loading Screen -->
+    <div class="loading-screen">
+        <div class="loading-animation"></div>
     </div>
 
-    <nav class="navbar">
-        <div class="nav-logo">KR</div>
+    <!-- Custom Cursor -->
+    <div class="cursor-dot"></div>
+    <div class="cursor-dot-outline"></div>
+
+    <!-- Background Effects -->
+    <div id="noise"></div>
+    <div class="gradient-bg"></div>
+    <div class="grid-background"></div>
+
+    <!-- Navigation -->
+    <nav class="navbar glass-card">
+        <div class="nav-logo">
+            <span class="logo-bracket">{</span>
+            <span class="logo-text">KR</span>
+            <span class="logo-bracket">}</span>
+        </div>
         <div class="nav-links">
-            <a href="#home" class="nav-item">Home</a>
-            <a href="#about" class="nav-item">About</a>
-            <a href="#projects" class="nav-item">Projects</a>
-            <a href="#contact" class="nav-item">Contact</a>
+            <a href="#home" class="nav-item">/home</a>
+            <a href="#about" class="nav-item">/about</a>
+            <a href="#experience" class="nav-item">/experience</a>
+            <a href="#projects" class="nav-item">/projects</a>
+            <a href="#achievements" class="nav-item">/achievements</a>
+            <a href="#contact" class="nav-item">/contact</a>
         </div>
         <div class="nav-social">
-            <a href="https://github.com/Kalyanraja" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://linkedin.com/in/kalyan-raja" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Kalyanraja" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/kalyan-raja" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
         </div>
     </nav>
 
+    <!-- Side Email -->
+    <div class="side-email">
+        <a href="mailto:kk23p@fsu.edu">kk23p@fsu.edu</a>
+    </div>
+
+    <!-- Side Social Links -->
+    <div class="side-social">
+        <ul>
+            <li><a href="https://github.com/Kalyanraja" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://linkedin.com/in/kalyan-raja" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+        </ul>
+    </div>
+
+    <!-- Main Content -->
     <main>
+        <!-- Hero Section -->
         <section id="home" class="hero-section">
             <div class="hero-content">
-                <h1 class="glitch" data-text="Hello, I'm Kalyan Raja">Hello, I'm Kalyan Raja</h1>
-                <p class="hero-subtitle">Software Engineer & Creative Developer</p>
+                <div class="hero-title">
+                    <span class="greeting">Hi, my name is</span>
+                    <h1 class="glitch" data-text="Kalyan Raja">Kalyan Raja</h1>
+                    <h2>I build high-performance systems.</h2>
+                    <p>As a Computer Science professional specializing in distributed systems and HPC, 
+                       I craft sophisticated solutions for complex computational challenges.</p>
+                </div>
                 <div class="hero-cta">
                     <a href="#projects" class="btn primary-btn">View My Work</a>
-                    <a href="#contact" class="btn secondary-btn">Get In Touch</a>
+                    <a href="assets/Kalyan-Resume.pdf" class="btn secondary-btn" target="_blank">Download CV</a>
                 </div>
-            </div>
-            <div class="hero-background">
-                <div class="particles"></div>
             </div>
         </section>
 
-        <!-- Add other sections here -->
-
-        <section id="contact" class="contact-section">
-            <h2 class="section-title">Get In Touch</h2>
-            <div class="contact-content">
-                <div class="contact-text">
-                    <p>I'm currently open to new opportunities and my inbox is always open. 
-                       Whether you have a question or just want to say hi, I'll try my best 
-                       to get back to you!</p>
+        <!-- About Section -->
+        <section id="about" class="section">
+            <h2 class="section-title">About Me</h2>
+            <div class="about-content glass-card">
+                <div class="about-text">
+                    <p>As a highly motivated Computer Science professional, I specialize in distributed systems, high-performance computing, and advanced software architectures. My expertise lies in developing sophisticated cache systems, distributed frameworks, and scalable cloud solutions, with a proven track record of achieving significant performance improvements in system optimization and resource management.</p>
+                    <p>Proficient in C++, Java, and Python, I leverage these languages alongside technologies like OpenMP, MPI, and cloud platforms (AWS, GCP) to deliver impactful solutions in parallel computing and distributed systems. Passionate about solving complex technological challenges, I remain committed to advancing the field of distributed computing while continuously enhancing my expertise in system architecture, performance optimization, and scalable software development.</p>
                 </div>
-                <div class="contact-form">
-                    <form id="contact-form" class="fade-up">
-                        <div class="form-group">
-                            <input type="text" id="name" required>
-                            <label for="name">Name</label>
+                <div class="skills-container">
+                    <h3>Technical Expertise</h3>
+                    <div class="skills-grid">
+                        <div class="skill-category">
+                            <h4>Languages</h4>
+                            <ul>
+                                <li>JavaScript (ES6+)</li>
+                                <li>Python</li>
+                                <li>Java</li>
+                                <li>HTML5/CSS3</li>
+                            </ul>
                         </div>
-                        <div class="form-group">
-                            <input type="email" id="email" required>
-                            <label for="email">Email</label>
+                        <div class="skill-category">
+                            <h4>Frameworks</h4>
+                            <ul>
+                                <li>React.js</li>
+                                <li>Node.js</li>
+                                <li>Express.js</li>
+                                <li>Spring Boot</li>
+                            </ul>
                         </div>
-                        <div class="form-group">
-                            <textarea id="message" required></textarea>
-                            <label for="message">Message</label>
+                        <div class="skill-category">
+                            <h4>Tools</h4>
+                            <ul>
+                                <li>Git</li>
+                                <li>AWS</li>
+                                <li>Docker</li>
+                                <li>MongoDB</li>
+                            </ul>
                         </div>
-                        <button type="submit" class="submit-btn">Send Message</button>
-                    </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Experience Section -->
+        <section id="experience" class="section">
+            <h2 class="section-title">Where I've Worked</h2>
+            <div class="experience-timeline glass-card">
+                <div class="experience-item">
+                    <div class="experience-date">2023 - Present</div>
+                    <div class="experience-content">
+                        <h3>Graduate Teaching Assistant</h3>
+                        <h4>Florida State University</h4>
+                        <p>Teaching and mentoring 120+ students in Computer Organization course, conducting lab sessions on Assembly Language Programming.</p>
+                    </div>
+                </div>
+                <!-- Add more experience items -->
+            </div>
+        </section>
+
+        <!-- Projects Section -->
+        <section id="projects" class="section">
+            <h2 class="section-title">Featured Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="assets/featured.png" alt="Project 1">
+                    </div>
+                    <div class="project-content">
+                        <h3>Project Title</h3>
+                        <p>Project description goes here. Explain the technology stack and your role in the project.</p>
+                        <div class="project-tech">
+                            <span>React</span>
+                            <span>Node.js</span>
+                            <span>MongoDB</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Add more project cards -->
+            </div>
+        </section>
+
+        <!-- Achievements Section -->
+        <section id="achievements" class="section">
+            <h2 class="section-title">Achievements</h2>
+            <div class="achievements-grid">
+                <!-- Achievements content as provided -->
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="section">
+            <h2 class="section-title">Get In Touch</h2>
+            <div class="contact-content glass-card">
+                <div class="contact-text">
+                    <p>I'm currently exploring new opportunities in distributed systems and high-performance computing. 
+                       Whether you have a question or just want to say hi, my inbox is always open!</p>
+                </div>
+                <div class="contact-cta">
+                    <a href="mailto:kk23p@fsu.edu" class="btn primary-btn">Say Hello</a>
                 </div>
             </div>
         </section>
     </main>
 
-    <footer>
+    <!-- Footer -->
+    <footer class="glass-card">
         <div class="footer-content">
-            <p>© 2024 Kalyan Raja. All rights reserved.</p>
-            <div class="footer-social">
-                <a href="mailto:kk23p@fsu.edu"><i class="fas fa-envelope"></i></a>
-                <a href="https://github.com/Kalyanraja"><i class="fab fa-github"></i></a>
-                <a href="https://linkedin.com/in/kalyan-raja"><i class="fab fa-linkedin"></i></a>
-            </div>
+            <p>Designed & Built by Kalyan Raja</p>
+            <p>© 2024 All rights reserved.</p>
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- Scripts -->
+    <script src="particles.js"></script>
+    <script src="animations.js"></script>
+    <script src="effects.js"></script>
 </body>
 </html> 
