--- a/index.html
+++ b/index.html
@@ -83,8 +83,19 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content glass-card">
                 <div class="about-text">
-                    <p>As a highly motivated Computer Science professional, I specialize in distributed systems, high-performance computing, and advanced software architectures. My expertise lies in developing sophisticated cache systems, distributed frameworks, and scalable cloud solutions, with a proven track record of achieving significant performance improvements in system optimization and resource management.</p>
-                    <p>Proficient in C++, Java, and Python, I leverage these languages alongside technologies like OpenMP, MPI, and cloud platforms (AWS, GCP) to deliver impactful solutions in parallel computing and distributed systems. Passionate about solving complex technological challenges, I remain committed to advancing the field of distributed computing while continuously enhancing my expertise in system architecture, performance optimization, and scalable software development.</p>
+                    <div class="education">
+                        <h3>Education</h3>
+                        <div class="education-item">
+                            <h4>Florida State University</h4>
+                            <p>Master of Science in Computer Science</p>
+                            <p>GPA: 3.7/4.0 | August 2023 – August 2025</p>
+                            <ul>
+                                <li>Coursework: Distributed Systems, Advanced Computer Architecture, Parallel Computing, Machine Learning</li>
+                                <li>Research: Multi-layer Graph Analytics, Distributed Computing Optimization, Deep Learning Systems</li>
+                            </ul>
+                        </div>
+                        <!-- Add JNTU education details -->
+                    </div>
                 </div>
                 <div class="skills-container">
                     <h3>Technical Expertise</h3>
@@ -143,19 +154,19 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="assets/featured.png" alt="Project 1">
+                        <img src="assets/images/projects/gcore-project.webp" alt="gCore - Multi-layer Graph Analysis" loading="lazy">
                     </div>
                     <div class="project-content">
-                        <h3>Project Title</h3>
-                        <p>Project description goes here. Explain the technology stack and your role in the project.</p>
+                        <h3>gCore - Multi-layer Graph Analysis</h3>
+                        <p>Implemented vertex peeling and GCD+ algorithms, optimizing graph redundancy by 66% for core decomposition.</p>
                         <div class="project-tech">
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>MongoDB</span>
+                            <span>C++</span>
+                            <span>Graph Algorithms</span>
+                            <span>HPC</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://github.com/yourusername/gcore" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://your-demo-link.com" target="_blank"><i class="fas fa-external-link-alt"></i> Demo</a>
                         </div>
                     </div>
                 </div>
@@ -167,7 +178,33 @@
         <section id="achievements" class="section">
             <h2 class="section-title">Achievements</h2>
             <div class="achievements-grid">
-                <!-- Achievements content as provided -->
+                <div class="achievement-card">
+                    <div class="achievement-category">Research</div>
+                    <h3 class="achievement-title">Publications</h3>
+                    <p class="achievement-description">
+                        First author - "Optimizing Multi-layer Graph Processing" (IEEE ICDCS 2024)<br>
+                        Co-author - "Efficient Cache Architectures" (ISCA 2024)
+                    </p>
+                </div>
+                
+                <div class="achievement-card">
+                    <div class="achievement-category">Open Source</div>
+                    <h3 class="achievement-title">GSoC 2023</h3>
+                    <p class="achievement-description">
+                        Developed distributed consensus system (10k TPS, 99.9% availability)
+                        Patent pending for VM resource allocation
+                    </p>
+                </div>
+                
+                <div class="achievement-card">
+                    <div class="achievement-category">Certifications</div>
+                    <h3 class="achievement-title">Cloud & Systems</h3>
+                    <p class="achievement-description">
+                        AWS Solutions Architect (980/1000)<br>
+                        Google Cloud Architect<br>
+                        Azure Solutions Architect Expert
+                    </p>
+                </div>
             </div>
         </section>
 
